--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@primevue/themes": "^4.2.4",
     "axios": "^1.7.7",
     "pinia": "^2.2.6",
+    "primevue": "^4.2.4",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
