--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@primevue/themes": "^4.2.4",
     "axios": "^1.7.7",
     "pinia": "^2.2.6",
+    "primeicons": "^7.0.0",
     "primevue": "^4.2.4",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
